--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Latihan JQuery</title>
-</head>
-<body>
-    
+    <script src="jquery-3.7.1.min.js"></script>
+  </head>
+  <body>
+    <h1>Where do want to go?</h1>
+    <h2 class="sample">Travel Destinations</h2>
+    <p>Plan your next adventure</p>
+    <ul id="destinations">
+      <li>Rome</li>
+      <li>Paris</li>
+      <li class="promo">Rio</li>
+    </ul>
+    <button>Aksi</button>
 
-    <script src="jquery-3.7.1.js"></script>
-</body>
+    <script>
+        $(document).ready(function(){
+          $("button").click(function(){
+            $(".sample").hide();
+          });
+        });
+        </script>
+
+        <script>
+            $(document).ready(function(){
+                $("button").click(function(){
+                    $(".promo").text("Bali");
+                })
+            })
+        </script>
+  </body>
 </html>
