--- a/index.html
+++ b/index.html
@@ -7,29 +7,34 @@
     <script src="jquery-3.7.1.min.js"></script>
   </head>
   <body>
-    <ul id="destinations">
-      <li>Bandung</li>
-      <li>Jakarta</li>
-      <ul>
-        <li>Jakarta Pusat</li>
-        <li>Jakarta Utara</li>
-        <li>Jakarta Selatan</li>
-        <li>Jakarta Barat</li>
-        <li class="promo">Jakarta Timur</li>
-      </ul>
-      <li>Surabaya</li>
-      <li>Bali</li>
-      <li id="france">France</li>
+    <h1>Kemana Anda ingin pergi ?</h1>
+    <ul class="lokasi">
+        <li class="bandung">Bandung</li>
+        <li class="surabaya"><strong>Surabaya</strong></li>
+        <li>Jakarta</li>
+        <li><input type="text" class="inputan" value="Malang"></li>
     </ul>
-    <button>Aksi</button>
-
     <script>
-      $(document).ready(function () {
-        $('button').click(function(){
-            $('#destinations li:prev').css('background-color', 'green');
-            $('#destinations li:even').css('background-color', 'red');
+        $(document).ready(function()
+        {
+            // var jogja = $('<li>Yogyakarta</li>');
+            // var bali = $('<li>Bali</li>');
+            // var subjudul = $('<h2>Pilih Tujuan Anda</h2>');
+            // var penutup = $('<h3>Terima kasih</h3>');
+
+            // jogja.prependTo($('.lokasi'));
+            // bali.appendTo($('.lokasi'));
+            // subjudul.insertBefore($('.lokasi'));
+            // penutup.insertAfter($('.lokasi'));
         });
-      });
-    </script>
+        </script>
+        <script>
+            $(document).ready(function(){
+                // console.log($('.inputan').val());
+                $('.bandung').remove();
+                $('.surabaya').empty();
+                $('.inputan').val('Semarang');
+            })
+        </script>
   </body>
 </html>
